Fixed solar system horizontal viewing on mobile. Viewport for solar system is now taller on mobile screens when viewing horizontally. Had conflicting issues due to height being set based on vw sizing

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,7 @@ footer {
 #viewport {
     width: 100vw;
     height: 75vh;
+    min-height: 450px;
     overflow: hidden;
     position: relative;
     cursor: grab;
